# D3D12TranslationLayer

./: CMakeLists.txt
DxbcParser/: CMakeLists.txt
src/: CMakeLists.txt
